#1 #time 45m Adds the extension "categories" property to the extension manifest in the "back-end" application.
