# back-end/src/dtos/app.dtos.ts
@@ -40,6 +40,7 @@ import {
   ExtensionActivity,
   ExtensionActivityKind,
   ExtensionAndManual,
+  ExtensionCategory,
   ExtensionGenerationOptions,
   ExtensionManual,
   ExtensionsConfiguration,
@@ -185,6 +186,7 @@ export {
   ExtensionActivity,
   ExtensionActivityKind,
   ExtensionAndManual,
+  ExtensionCategory,
   ExtensionsConfiguration,
   ExtensionGenerationOptions,
   extensionIdSchema,
